--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
-  "*.{js,jsx,ts,tsx}": ["prettier --write .", "eslint  --fix"],
+  "*.{js,jsx,ts,tsx}": ["eslint  --fix", "prettier --write"],
   "*.md": ["prettier --write"],
   "*.html": ["prettier --write"],
   "*.{css,scss,less}": ["prettier --write"]
